Added virtual thread implementation based on certain task size